new pages added on normal

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
     </section>
 
 
-    <div class="testimonial-area testimonial-padding">
+    <div class="testimonial-area testimonial-padding" id="show-testimonials">
       <div class="container">
 
         <div class="row d-flex justify-content-center">
@@ -754,7 +754,7 @@
                   <ul>
                     <li><a href="#"> View Project</a></li>
                     <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Testimonial</a></li>
+                    <li><a href="#show-testimonials">Testimonial</a></li>
                     <li><a href="#">Proparties</a></li>
                     <li><a href="#">Support</a></li>
                   </ul>
