latest fix on nav

--- a/apaxydesign/email-compose.html
+++ b/apaxydesign/email-compose.html
@@ -269,8 +269,8 @@
                                     <span>Email</span>
                                 </a>
                                 <ul class="sub-menu" aria-expanded="false">
-                                    <li><a href="email-inbox.html">Inbox</a></li>
-                                    <li><a href="email-read.html">Email Read</a></li>
+                                    <li><a href="#">Inbox</a></li>
+                                    <li><a href="#">Email Read</a></li>
                                     <li><a href="email-compose.html">Email Compose</a></li>
                                 </ul>
                             </li>
