--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       </div>
       <div class="col-md-8 text-right margin-10">
         <div class="quick-links">
-          <p><small>Website Design By&nbsp;<a href="http://www.xwaydesigns.com/">X-way Designs</a></small></p>
+          <!-- <p><small>Website Design By&nbsp;<a href="http://www.xwaydesigns.com/">X-way Designs</a></small></p> -->
         </div>
       </div>
     </div>
