gallery added and upload pictures

--- a/about-our-trust.html
+++ b/about-our-trust.html
@@ -180,6 +180,9 @@
                 <a class="nav-link" href="stories.html">Stories</a>
               </li>
               <li class="nav-item">
+                  <a class="nav-link" href="gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
@@ -234,23 +237,16 @@
                 <p>
                   United Peace Foundation is a non-profit organisation established in 2014 and registered under Trust Act 1882 having Reg no. 6454/1048 in the year 2015 at Jamsheddpur Jharkhand. We work across India especially in rural areas to help and improve the life of destiute, orphans, widows and homeless children with a vision to spread peace & harmony and brotherhood amongst the different religions, caste and creed.
                 </p>
-                <blockquote class="blockquote">
+                <!-- <blockquote class="blockquote">
                   <p class="mb-0 text-black">
                     &ldquo;The happiest thing in life is when you care about someone, and they care about you too.&rdquo;
                   </p>
                   <footer class="blockquote-footer">
                     Shahnawaz <cite title="Source Title"></cite>
                   </footer>
-                </blockquote>
-                <p class="element-animate" data-animate-effect="fadeIn">
-                  <img
-                    src="img/about.jpg"
-                    alt="Image placeholder"
-                    class="img-fluid"
-                  />
-                </p>
+                </blockquote> -->
                 <p>
-                  Our aim is to provide the nutrition food, quality education, full healthcare and shelter to homeless orphans & badly effected children by scourge of poverty.
+                  Our aim is to provide the nutritious food, quality education, full healthcare and shelter to homeless orphans & badly affected children by scourge of poverty.
                 </p>
                 <!-- <p class="element-animate" data-animate-effect="fadeIn">
                   <img
@@ -259,6 +255,13 @@
                     class="img-fluid"
                   />
                 </p> -->
+                <p class="element-animate" data-animate-effect="fadeIn">
+                  <img
+                    src="img/about.jpg"
+                    alt="Image placeholder"
+                    class="img-fluid"
+                  />
+                </p>
               </div>
             </div>
           </div>
