--- a/educational-programme.html
+++ b/educational-programme.html
@@ -180,6 +180,9 @@
                 <a class="nav-link" href="stories.html">Stories</a>
               </li>
               <li class="nav-item">
+                  <a class="nav-link" href="gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
@@ -233,6 +236,15 @@
                 <h2>Educational Programme</h2>
                 <p>
                   To uplift the deprived and underprivileged section of the society through education and make them capable of living as respected, responsible human beings. By your kind love and support we provide educational expenses of poor students and orphans living with their widowed mother or guardians.</p>
+                  <p>
+                    Intending to setup free educational institutions for poor students and launch various educational and training programmes.</p>
+                  <!-- <p class="element-animate" data-animate-effect="fadeIn">
+                    <img
+                      src="img/beautiful.jpg"
+                      alt="Image placeholder"
+                      class="img-fluid"
+                    />
+                  </p> -->
                 <p class="element-animate" data-animate-effect="fadeIn">
                   <img
                     src="img/programme/programme2.jpg"
@@ -240,15 +252,6 @@
                     class="img-fluid"
                   />
                 </p>
-                <p>
-                  Intending to setup free educational institutions for poor students and launch various educational and training programmes.</p>
-                <!-- <p class="element-animate" data-animate-effect="fadeIn">
-                  <img
-                    src="img/beautiful.jpg"
-                    alt="Image placeholder"
-                    class="img-fluid"
-                  />
-                </p> -->
               </div>
             </div>
           </div>
