--- a/emergency-relief-programme.html
+++ b/emergency-relief-programme.html
@@ -180,6 +180,9 @@
                 <a class="nav-link" href="stories.html">Stories</a>
               </li>
               <li class="nav-item">
+                  <a class="nav-link" href="gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
@@ -232,7 +235,16 @@
               <div class="col-md-12">
                 <h2>Emergency Relief Programme</h2>
                 <p>
-                  We work across India especially in rural areas to help and improve the life of destiute, orphans, widows and homeless children with a vision to spread peace & harmony and brotherhood amongst the different religions, caste and creed.</p>
+                  Disaster whether natural or man-made, children are the most vulnerable and adversely affected. More than half of the people who are affected by disaster are children. Our calling is to protect the well being of children affected by disaster like corona, flood or human conflict etc.</p>
+                  <p>
+                    With your kind support our disaster management activities seek to save lives and reduce human suffering, protect and restore livelihoods.</p>
+                  <!-- <p class="element-animate" data-animate-effect="fadeIn">
+                    <img
+                      src="img/beautiful.jpg"
+                      alt="Image placeholder"
+                      class="img-fluid"
+                    />
+                  </p> -->
                 <p class="element-animate" data-animate-effect="fadeIn">
                   <img
                     src="img/programme/programme4.jpg"
@@ -240,15 +252,6 @@
                     class="img-fluid"
                   />
                 </p>
-                <p>
-                  With your kind support our disaster management activities seek to save lives and reduce human suffering, protect and restore livelihoods.</p>
-                <!-- <p class="element-animate" data-animate-effect="fadeIn">
-                  <img
-                    src="img/beautiful.jpg"
-                    alt="Image placeholder"
-                    class="img-fluid"
-                  />
-                </p> -->
               </div>
             </div>
           </div>
