--- a/food-programme.html
+++ b/food-programme.html
@@ -180,6 +180,9 @@
                 <a class="nav-link" href="stories.html">Stories</a>
               </li>
               <li class="nav-item">
+                  <a class="nav-link" href="gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
@@ -233,6 +236,15 @@
                 <h2>Food Programme</h2>
                 <p>
                   Dietry assistance or food parcel is a lifeline for the families who have no income or bread earner. And for old helpless destitute who are unable to work and widowed headed families. By your generous support we are able to provide necessary dietry assistance to these needy people.</p>
+                  <p>
+                    United Peace Foundation is willing to reach every single needy in all parts of cities and villages to provide dietry assistance.</p>
+                  <!-- <p class="element-animate" data-animate-effect="fadeIn">
+                    <img
+                      src="img/beautiful.jpg"
+                      alt="Image placeholder"
+                      class="img-fluid"
+                    />
+                  </p> -->
                 <p class="element-animate" data-animate-effect="fadeIn">
                   <img
                     src="img/programme/programme3.jpg"
@@ -240,15 +252,6 @@
                     class="img-fluid"
                   />
                 </p>
-                <p>
-                  United Peace Foundation is willing to reach every single needy in all parts of cities and villages to provide dietry assistance.</p>
-                <!-- <p class="element-animate" data-animate-effect="fadeIn">
-                  <img
-                    src="img/beautiful.jpg"
-                    alt="Image placeholder"
-                    class="img-fluid"
-                  />
-                </p> -->
               </div>
             </div>
           </div>
