--- a/how-to-donate.html
+++ b/how-to-donate.html
@@ -189,6 +189,9 @@
                 <a class="nav-link" href="stories.html">Stories</a>
               </li>
               <li class="nav-item">
+                  <a class="nav-link" href="gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
@@ -247,11 +250,13 @@
                 <blockquote class="blockquote">
                   <p class="mb-0 text-black">
                     &ldquo;You can also donate through any UPI app.&rdquo;
+                    <p>Merchant Name : M/S.UNITED PEACE FOUNDATION<br>
+                      Mobile Number : 8825139198</p>
                   </p>
                 </blockquote>
                 <p class="element-animate" data-animate-effect="fadeIn">
                   <img
-                    src="img/upi-qr.jpg"
+                    src="img/upi.jpeg"
                     alt="Image placeholder"
                     class=""
                     width="250px" height="250px"
