--- a/orphan-sponsorship-programme.html
+++ b/orphan-sponsorship-programme.html
@@ -180,6 +180,9 @@
                 <a class="nav-link" href="stories.html">Stories</a>
               </li>
               <li class="nav-item">
+                  <a class="nav-link" href="gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
@@ -233,22 +236,22 @@
                 <h2>Orphan Sponsorship Programme</h2>
                 <p>
                   Orphan sponsorship is a vital lifeline for many vulnerable young children. There are many unfortunate children who do not have loving support of a family. Children whose shelter is open sky and bed is a piece of cardboard box, living day to day with the risk of abuse and exploitation.</p>
+                  <p>
+                    Our Orphan sponsorship programme changes the life of these children in some of the most deprived communities in India. With your support we can ensure that they receive education, food, healthcare & medical support and loving care that any child needs.</p>
+                  <!-- <p class="element-animate" data-animate-effect="fadeIn">
+                    <img
+                      src="img/beautiful.jpg"
+                      alt="Image placeholder"
+                      class="img-fluid"
+                    />
+                  </p> -->
                 <p class="element-animate" data-animate-effect="fadeIn">
                   <img
-                    src="img/programme/osp.jpg"
+                    src="img/osp.jpg"
                     alt="Image placeholder"
                     class="img-fluid"
                   />
                 </p>
-                <p>
-                  Our Orphan sponsorship programmeme changes the life of these children in some of the most deprived communities in India. With your support we can ensure that they receive education, food, healthcare &medical support and loving care that any child needs.</p>
-                <!-- <p class="element-animate" data-animate-effect="fadeIn">
-                  <img
-                    src="img/beautiful.jpg"
-                    alt="Image placeholder"
-                    class="img-fluid"
-                  />
-                </p> -->
               </div>
             </div>
           </div>
