--- a/stories.html
+++ b/stories.html
@@ -180,6 +180,9 @@
                 <a class="nav-link active" href="stories.html">Stories</a>
               </li>
               <li class="nav-item">
+                  <a class="nav-link" href="gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
@@ -215,7 +218,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-md-6 col-12">
-            <a href="stories-single.html" class="link-thumbnail">
+            <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
                 <span class="date">Date</span> "Name"
               </h3>
@@ -228,7 +231,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
-            <a href="stories-single.html" class="link-thumbnail">
+            <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
                 <span class="date">Date</span> "Name"
               </h3>
@@ -241,7 +244,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
-            <a href="stories-single.html" class="link-thumbnail">
+            <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
                 <span class="date">Date</span> "Name"
               </h3>
@@ -254,7 +257,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
-            <a href="stories-single.html" class="link-thumbnail">
+            <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
                 <span class="date">Date</span> "Name"
               </h3>
@@ -267,7 +270,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
-            <a href="stories-single.html" class="link-thumbnail">
+            <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
                 <span class="date">Date</span> "Name"
               </h3>
@@ -280,7 +283,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
-            <a href="stories-single.html" class="link-thumbnail">
+            <a href="javascript:void(0)" class="link-thumbnail">
               <h3>
                 <span class="date">Date</span> "Name"
               </h3>
