--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
                 <a class="nav-link" href="stories.html">Stories</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
