--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
           <div class="major-caousel js-carousel-1 owl-carousel">
             <div>
               <div class="media d-block media-custom text-left">
-                <a href="adoption-single.html"
+                <a href="orphan-sponsorship-programme.html"
                   ><img
                     src="img/programme/programme1.jpg"
                     alt="Image Placeholder"
@@ -667,7 +667,7 @@
             </div>
             <div>
               <div class="media d-block media-custom text-left">
-                <a href="adoption-single.html"
+                <a href="educational-programme.html"
                   ><img
                     src="img/programme/programme2.jpg"
                     alt="Image Placeholder"
@@ -684,7 +684,7 @@
             </div>
             <div>
               <div class="media d-block media-custom text-left">
-                <a href="adoption-single.html"
+                <a href="food-programme.html"
                   ><img
                     src="img/programme/programme3.jpg"
                     alt="Image Placeholder"
@@ -701,7 +701,7 @@
             </div>
             <div>
               <div class="media d-block media-custom text-left">
-                <a href="adoption-single.html"
+                <a href="emergency-relief-programme.html"
                   ><img
                     src="img/programme/programme4.jpg"
                     alt="Image Placeholder"
