--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
   </head>
   <body>
         <!-- pop-up content -->
-    <div class="popup-container">
-      <div class="popup"> <a href="javascript:void(0)"><img src="img/ramadan-popup.jpeg" /></a> </div>
-    </div>
+    <!-- <div class="popup-container">
+      <div class="popup"> <a href="ramadan-appeal.html"><img src="img/ramadan-popup.jpeg" /></a> </div>
+    </div> -->
     <header role="banner">
       <!-- <div class="top-bar">
         <div class="container">
@@ -896,7 +896,7 @@
               All rights reserved 
               <!-- | This template is made with
               <i class="fa fa-heart-o" aria-hidden="true"></i> by
-              <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
+              <a href="https://bluenix.in" target="_blank">Bluenix</a> -->
             </p>
           </div>
           <div class="col-6 text-md-center text-left">
@@ -976,7 +976,7 @@
       $(document).ready(function(){
         $('body').delegate('.popup-container img', 'click', function(e){
           e.preventDefault();
-          window.location.href="contact.html";
+          window.location.href="ramadan-appeal.html";
         });
 
         $('body').delegate('.popup-container', 'click', function(e){
