touch issue solved

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
   </head>
   <body>
         <!-- pop-up content -->
-    <div class="popup-container">
+    <!-- <div class="popup-container">
       <div class="popup"> <a href="ramadan-appeal.html"><img src="img/ramadan-popup.jpeg" /></a> </div>
-    </div>
+    </div> -->
     <header role="banner">
       <!-- <div class="top-bar">
         <div class="container">
