--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
             <p class="mb-0 text-left">
               United Peace Foundation is a non-profit organisation established in 2014 and registered under Trust Act 1882 having Reg no. 6454/1048 in the year 2015 at Jamsheddpur Jharkhand. We work across India especially in rural areas to help and improve the life of destiute, orphans, widows and homeless children with a vision to spread peace & harmony and brotherhood amongst the different religions, caste and creed.
             </p><br>
-            <p class="mb-0 text-left">Our aim is to provide the nutrition food, quality education, full healthcare and shelter to homeless orphans & badly effected children by scourge of poverty.
+            <p class="mb-0 text-left">Our aim is to provide the nutritious food, quality education, full healthcare and shelter to homeless orphans & badly affected children by scourge of poverty.
             </p>
           </div>
         </div>
