--- a/gallery.html
+++ b/gallery.html
@@ -186,55 +186,35 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-12">
                     <a href="javascript:void(0)" class="link-thumbnail">
-                        <h3>
-                            <span class="date">Date</span> "Name"
-                        </h3>
-                        <span class="ion-plus icon"></span>
                         <img src="img/gallery/gallery-1.jpg" alt="Image placeholder" class="img-fluid" />
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <a href="javascript:void(0)" class="link-thumbnail">
-                        <h3>
-                            <span class="date">Date</span> "Name"
-                        </h3>
-                        <span class="ion-plus icon"></span>
                         <img src="img/gallery/gallery-2.jpg" alt="Image placeholder" class="img-fluid" />
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <a href="javascript:void(0)" class="link-thumbnail">
-                        <h3>
-                            <span class="date">Date</span> "Name"
-                        </h3>
-                        <span class="ion-plus icon"></span>
                         <img src="img/gallery/gallery-3.jpg" alt="Image placeholder" class="img-fluid" />
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <a href="javascript:void(0)" class="link-thumbnail">
-                        <h3>
-                            <span class="date">Date</span> "Name"
-                        </h3>
-                        <span class="ion-plus icon"></span>
                         <img src="img/gallery/gallery-4.jpg" alt="Image placeholder" class="img-fluid" />
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <a href="javascript:void(0)" class="link-thumbnail">
-                        <h3>
-                            <span class="date">Date</span> "Name"
-                        </h3>
-                        <span class="ion-plus icon"></span>
                         <img src="img/gallery/gallery-5.jpg" alt="Image placeholder" class="img-fluid" />
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
                     <a href="javascript:void(0)" class="link-thumbnail">
-                        <h3>
+                        <!-- <h3>
                             <span class="date">Date</span> "Name"
                         </h3>
-                        <span class="ion-plus icon"></span>
+                        <span class="ion-plus icon"></span> -->
                         <img src="img/gallery/gallery-1.jpg" alt="Image placeholder" class="img-fluid" />
                     </a>
                 </div>
