removed pop-up only

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
   </head>
   <body>
         <!-- pop-up content -->
-    <div class="popup-container">
+    <!-- <div class="popup-container">
       <div class="popup"> <a href="ramadan-appeal.html"><img src="img/ramadan-popup.jpeg" /></a> </div>
-    </div>
+    </div> -->
     <header role="banner">
       <!-- <div class="top-bar">
         <div class="container">
@@ -600,9 +600,9 @@
         <div class="row justify-content-center">
           <div class="col-md-12 text-center">
             <h2 class="text-uppercase heading mb-4">WHO WE ARE</h2>
-            <p class="mb-0 text-left">
+            <!-- <p class="mb-0 text-left">
               Many vulnerable orphans and abandoned children are left on the streets begging for survival, need care and support. To induct them into a society where they can get the chance to grow up in a loving and caring environment. To provide nutritious food, quality education, healthcare and shelter for the homeless orphans and poverty-stricken children. To help and uplift the destitute, widows and deprived section of the society regardless of their faith, caste or creed.
-            </p><br>
+            </p><br> -->
             <p class="mb-0 text-left">
               Support orphans by providing food, education, medical assistance and other basic amenities.
             </p><br>
