10 years celeberation modal popup added

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
   </head>
   <body>
         <!-- pop-up content -->
-    <!-- <div class="popup-container">
-      <div class="popup"> <a href="ramadan-appeal.html"><img src="img/ramadan-popup.jpeg" /></a> </div>
-    </div> -->
+    <div class="popup-container">
+      <div class="popup"> <a href="javascript:void(0)"><img src="img/10yrs-celeb.jpeg" /></a> </div>
+    </div>
     <header role="banner">
       <!-- <div class="top-bar">
         <div class="container">
@@ -976,7 +976,7 @@
       $(document).ready(function(){
         $('body').delegate('.popup-container img', 'click', function(e){
           e.preventDefault();
-          window.location.href="ramadan-appeal.html";
+          // window.location.href="ramadan-appeal.html";
         });
 
         $('body').delegate('.popup-container', 'click', function(e){
