--- a/contact.html
+++ b/contact.html
@@ -407,7 +407,7 @@
                 alert('Form submitted successfully!');
               },
               error: function(xhr, status, error) {
-                console.log(xhr.responseText);
+                alert("Something went wrong. Please check & try again later.");
               }
             });
           }
